--- a/css/style.css
+++ b/css/style.css
@@ -1,32 +1,46 @@
 body{
   /* make all text courier with a backup of monospace, set margin and padding to 10px */
-  
+  font-family: "courier", monospace;
+  margin: 10px;
+  padding: 10px;
 }
 h1{
   /* make your headers #E60000 color and bold */
-  
+  color: #E60000;
+  font-weight: bold;
 }
 p{
   /* make your paragraphs 14pt, double-spaced and 10px of padding on the left and right */
-  
+  font-size: 14pt;
+  line-height: 2;
+  padding-left: 10px;
+  padding-right: 10px;
+
 }
 a{
   /* make your links red, italics, and underlined */
-  
+  color: #FF0000;
+  font-style: italic;
+  text-decoration: underline;
 }
 a:hover{
   /* make the background color of your link black and the text white when you hover over it */
-  
+  background-color: #000000;
+  color: #ffffff
 }
 ul{
   /* make bullet points red squares */
-  
+  list-style-type: square;
+  color: red;
 }
 img{
   /* make the image 300px wide and 220px high, 10px of padding, and a 3px dashed border in the color of your choice */
- 
+  width: 300px;
+  height: 220px;
+  border: 3px dashed purple;
 }
 footer{
   /* style the footer so it has a black background and white text */
-  
+  color: white;
+  background-color: black;
 }
